add synthea page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,10 +27,12 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
+      - synthea.qmd
 
 format:
   html:
     theme: flatly
+    code-copy: true
 
 bibliography: pharmaccess.bib
 toc: true
