--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-altair==5.0.1
-matplotlib==3.7.1
-numpy==1.24.1
-pandas==2.0.2
-pyarrow==12.0.1
-scikit-learn==1.2.2
-statsmodels==0.14.0
-xgboost==1.7.4
-vega @ git+https://github.com/vega/ipyvega/@master
-vega_datasets
-vegafusion
-vegafusion-python-embed
-vl-convert-python
+duckdb==0.9.0
+ibis==3.2.0
+'ibis-framework[duckdb]==6.2.0'
+nbclient==0.8.0
+nbformat==5.9.2
+pandas==2.0.0
+polars==0.19.5
+pyspark==3.5.0
