--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,85 @@
+appnope==0.1.3
+asttokens==2.4.1
+atpublic==4.0
+attrs==23.1.0
+backports.functools-lru-cache==1.6.5
+bidict==0.22.1
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.2
+comm==0.1.4
+debugpy==1.8.0
+decorator==5.1.1
 duckdb==0.9.0
+duckdb-engine==0.9.2
+exceptiongroup==1.1.3
+executing==2.0.1
+fastjsonschema==2.18.1
+filelock==3.13.1
+greenlet==3.0.1
 ibis==3.2.0
-ibis-framework[duckdb]==6.2.0
+ibis-framework==6.2.0
+idna==3.4
+importlib-metadata==6.8.0
+ipykernel==6.26.0
+ipython==8.17.2
+jedi==0.19.1
+Jinja2==3.1.2
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+multipledispatch==1.0.0
 nbclient==0.8.0
 nbformat==5.9.2
+nest-asyncio==1.5.8
+numpy==1.26.2
+packaging==23.2
 pandas==2.0.0
+parso==0.8.3
+parsy==2.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pip==23.3.1
+platformdirs==4.0.0
 polars==0.19.5
+pooch==1.8.0
+prompt-toolkit==3.0.40
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py4j==0.10.9.7
+pyarrow==11.0.0
+pycparser==2.21
+Pygments==2.16.1
 pyspark==3.5.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+pyzmq==25.1.1
+referencing==0.30.2
+requests==2.31.0
+rich==13.6.0
+rpds-py==0.12.0
+rpy2==3.5.14
+setuptools==68.2.2
+six==1.16.0
+SQLAlchemy==2.0.23
+sqlalchemy-views==0.3.2
+sqlglot==17.16.2
+stack-data==0.6.2
+toolz==0.12.0
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.13.0
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+urllib3==2.1.0
+wcwidth==0.2.9
+wheel==0.41.3
+xxhash==3.4.1
+zipp==3.17.0
