--- a/analytics_handbook_env.yml
+++ b/analytics_handbook_env.yml
@@ -3,194 +3,194 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _r-mutex=1.0.1=anacondar_1
-  - appnope=0.1.3=pyhd8ed1ab_0
-  - asttokens=2.4.1=pyhd8ed1ab_0
-  - backports=1.0=pyhd8ed1ab_3
-  - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
-  - bwidget=1.9.14=h694c41f_1
-  - bzip2=1.0.8=h10d778d_5
-  - c-ares=1.21.0=h10d778d_0
-  - ca-certificates=2023.7.22=h8857fd0_0
-  - cairo=1.18.0=h99e66fa_0
-  - cctools_osx-64=973.0.1=ha1c5b94_15
-  - clang=16.0.6=hc177806_2
-  - clang-16=16.0.6=default_h762fdd7_2
-  - clang_impl_osx-64=16.0.6=h8787910_6
-  - clang_osx-64=16.0.6=hb91bd55_6
-  - clangxx=16.0.6=default_h762fdd7_2
-  - clangxx_impl_osx-64=16.0.6=h1b7723c_6
-  - clangxx_osx-64=16.0.6=h2fff7d5_6
-  - comm=0.1.4=pyhd8ed1ab_0
-  - compiler-rt=16.0.6=he1888fc_1
-  - compiler-rt_osx-64=16.0.6=he1888fc_1
-  - curl=8.4.0=h726d00d_0
-  - debugpy=1.8.0=py39h840bb9f_1
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - exceptiongroup=1.1.3=pyhd8ed1ab_0
-  - executing=2.0.1=pyhd8ed1ab_0
-  - expat=2.5.0=hf0c8a7f_1
-  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-  - font-ttf-inconsolata=3.000=h77eed37_0
-  - font-ttf-source-code-pro=2.038=h77eed37_0
-  - font-ttf-ubuntu=0.83=hab24e00_0
-  - fontconfig=2.14.2=h5bb23bf_0
-  - fonts-conda-ecosystem=1=0
-  - fonts-conda-forge=1=0
-  - freetype=2.12.1=h60636b9_2
-  - fribidi=1.0.10=hbcb3906_0
-  - gettext=0.21.1=h8a4c099_0
-  - gfortran_impl_osx-64=12.3.0=h54fd467_1
-  - gfortran_osx-64=12.3.0=h18f7dce_1
-  - gmp=6.3.0=h93d8f39_0
-  - graphite2=1.3.13=h2e338ed_1001
-  - harfbuzz=8.2.1=h7666e2a_0
-  - icu=73.2=hf5e326d_0
-  - importlib-metadata=6.8.0=pyha770c72_0
-  - importlib_metadata=6.8.0=hd8ed1ab_0
-  - ipykernel=6.26.0=pyh3cd1d5f_0
-  - ipython=8.17.2=pyh31c8845_0
-  - isl=0.25=hb486fe8_0
-  - jedi=0.19.1=pyhd8ed1ab_0
-  - jupyter_client=8.6.0=pyhd8ed1ab_0
-  - jupyter_core=5.5.0=py39h6e9494a_0
-  - krb5=1.21.2=hb884880_0
-  - ld64_osx-64=609=ha20a434_15
-  - lerc=4.0.0=hb486fe8_0
-  - libblas=3.9.0=19_osx64_openblas
-  - libclang-cpp16=16.0.6=default_h762fdd7_2
-  - libcurl=8.4.0=h726d00d_0
-  - libcxx=16.0.6=hd57cbcb_0
-  - libdeflate=1.19=ha4e1b8e_0
-  - libedit=3.1.20191231=h0678c8f_2
-  - libev=4.33=haf1e3a3_1
-  - libexpat=2.5.0=hf0c8a7f_1
-  - libffi=3.4.2=h0d85af4_5
-  - libgfortran=5.0.0=13_2_0_h97931a8_1
-  - libgfortran-devel_osx-64=12.3.0=h0b6f5ec_1
-  - libgfortran5=13.2.0=h2873a65_1
-  - libglib=2.78.1=h6d9ecee_0
-  - libiconv=1.17=hac89ed1_0
-  - libjpeg-turbo=3.0.0=h0dc2134_1
-  - liblapack=3.9.0=19_osx64_openblas
-  - libllvm16=16.0.6=he4b1e75_2
-  - libnghttp2=1.58.0=h64cf6d3_0
-  - libopenblas=0.3.24=openmp_h48a4ad5_0
-  - libpng=1.6.39=ha978bb4_0
-  - libsodium=1.0.18=hbcb3906_1
-  - libsqlite=3.44.0=h92b6c6a_0
-  - libssh2=1.11.0=hd019ec5_0
-  - libtiff=4.6.0=h684deea_2
-  - libwebp-base=1.3.2=h0dc2134_0
-  - libxml2=2.11.5=h3346baf_1
-  - libzlib=1.2.13=h8a1eda9_5
-  - llvm-openmp=17.0.4=hb6ac08f_0
-  - llvm-tools=16.0.6=he4b1e75_2
-  - make=4.3=h22f3db7_1
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - mpc=1.3.1=h81bd1dd_0
-  - mpfr=4.2.1=h0c69b56_0
-  - ncurses=6.4=h93d8f39_2
-  - nest-asyncio=1.5.8=pyhd8ed1ab_0
-  - openssl=3.1.4=hd75f5a5_0
-  - packaging=23.2=pyhd8ed1ab_0
-  - pandoc=3.1.3=h9d075a6_0
-  - pango=1.50.14=h19c1c8a_2
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pcre2=10.40=h1c4e4bc_0
-  - pexpect=4.8.0=pyh1a96a4e_2
-  - pickleshare=0.7.5=py_1003
-  - pip=23.3.1=pyhd8ed1ab_0
-  - pixman=0.42.2=he965462_0
-  - platformdirs=4.0.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.40=pyha770c72_0
-  - prompt_toolkit=3.0.40=hd8ed1ab_0
-  - psutil=5.9.5=py39hdc70f33_1
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pygments=2.16.1=pyhd8ed1ab_0
-  - python=3.9.18=h07e1443_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.9=4_cp39
-  - pyzmq=25.1.1=py39h53dde38_2
-  - r-base=4.3.2=hf996cbc_0
-  - r-base64enc=0.1_3=r43h6dc245f_1006
-  - r-bslib=0.5.1=r43hc72bb7e_0
-  - r-cachem=1.0.8=r43h6dc245f_1
-  - r-cli=3.6.1=r43hac7d2d5_1
-  - r-cpp11=0.4.6=r43hc72bb7e_0
-  - r-crayon=1.5.2=r43hc72bb7e_2
-  - r-dbi=1.1.3=r43hc72bb7e_2
-  - r-digest=0.6.33=r43hac7d2d5_0
-  - r-dplyr=1.1.3=r43hac7d2d5_0
-  - r-duckdb=0.9.1_1=r43hf333f65_0
-  - r-ellipsis=0.3.2=r43h6dc245f_2
-  - r-evaluate=0.23=r43hc72bb7e_0
-  - r-fansi=1.0.5=r43hb2c329c_0
-  - r-fastmap=1.1.1=r43hac7d2d5_1
-  - r-fontawesome=0.5.2=r43hc72bb7e_0
-  - r-fs=1.6.3=r43hac7d2d5_0
-  - r-generics=0.1.3=r43hc72bb7e_2
-  - r-glue=1.6.2=r43h6dc245f_2
-  - r-here=1.0.1=r43hc72bb7e_2
-  - r-highr=0.10=r43hc72bb7e_1
-  - r-htmltools=0.5.7=r43h64b2c41_0
-  - r-irdisplay=1.1=r43hd8ed1ab_2
-  - r-irkernel=1.3.2=r43h785f33e_1
-  - r-jquerylib=0.1.4=r43hc72bb7e_2
-  - r-jsonlite=1.8.7=r43h6dc245f_0
-  - r-knitr=1.45=r43hc72bb7e_0
-  - r-lattice=0.22_5=r43hb2c329c_0
-  - r-lifecycle=1.0.4=r43hc72bb7e_0
-  - r-lubridate=1.9.3=r43h6dc245f_0
-  - r-magrittr=2.0.3=r43h6dc245f_2
-  - r-matrix=1.6_2=r43h39411cf_0
-  - r-memoise=2.0.1=r43hc72bb7e_2
-  - r-mime=0.12=r43h6dc245f_2
-  - r-pbdzmq=0.3_10=r43h52bf228_1
-  - r-pillar=1.9.0=r43hc72bb7e_1
-  - r-pkgconfig=2.0.3=r43hc72bb7e_3
-  - r-png=0.1_8=r43h9ae9e50_1
-  - r-r6=2.5.1=r43hc72bb7e_2
-  - r-rappdirs=0.3.3=r43h6dc245f_2
-  - r-rcpp=1.0.11=r43hac7d2d5_0
-  - r-rcpptoml=0.2.2=r43hac7d2d5_1
-  - r-repr=1.1.6=r43h785f33e_1
-  - r-reticulate=1.34.0=r43h64b2c41_0
-  - r-rlang=1.1.2=r43h64b2c41_0
-  - r-rmarkdown=2.25=r43hc72bb7e_0
-  - r-rprojroot=2.0.4=r43hc72bb7e_0
-  - r-sass=0.4.7=r43hac7d2d5_0
-  - r-stringi=1.7.12=r43h480af0a_3
-  - r-stringr=1.5.0=r43h785f33e_1
-  - r-tibble=3.2.1=r43h6dc245f_2
-  - r-tidyselect=1.2.0=r43hbe3e9c8_1
-  - r-timechange=0.2.0=r43hac7d2d5_1
-  - r-tinytex=0.48=r43hc72bb7e_1
-  - r-utf8=1.2.4=r43hb2c329c_0
-  - r-uuid=1.1_1=r43h6dc245f_0
-  - r-vctrs=0.6.4=r43h64b2c41_0
-  - r-withr=2.5.2=r43hc72bb7e_0
-  - r-xfun=0.41=r43h64b2c41_0
-  - r-yaml=2.3.7=r43h6dc245f_1
-  - readline=8.2=h9e318b2_1
-  - setuptools=68.2.2=pyhd8ed1ab_0
-  - sigtool=0.1.3=h88f4db0_0
-  - six=1.16.0=pyh6c4a22f_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tapi=1100.0.11=h9ce4665_0
-  - tk=8.6.13=h1abcd95_1
-  - tktable=2.10=ha166976_5
-  - tornado=6.3.3=py39hdc70f33_1
-  - traitlets=5.13.0=pyhd8ed1ab_0
-  - typing_extensions=4.8.0=pyha770c72_0
-  - wcwidth=0.2.9=pyhd8ed1ab_0
-  - wheel=0.41.3=pyhd8ed1ab_0
-  - xz=5.2.6=h775f41a_0
-  - zeromq=4.3.5=h93d8f39_0
-  - zipp=3.17.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h8a1eda9_5
-  - zstd=1.5.5=h829000d_0
+  - _r-mutex=1.0.1
+  - appnope=0.1.3
+  - asttokens=2.4.1
+  - backports=1.0
+  - backports.functools_lru_cache=1.6.5
+  - bwidget=1.9.14
+  - bzip2=1.0.8
+  - c-ares=1.21.0
+  - ca-certificates=2023.7.22
+  - cairo=1.18.0
+  - cctools_osx-64=973.0.1
+  - clang=16.0.6
+  - clang-16=16.0.6
+  - clang_impl_osx-64=16.0.6
+  - clang_osx-64=16.0.6
+  - clangxx=16.0.6
+  - clangxx_impl_osx-64=16.0.6
+  - clangxx_osx-64=16.0.6
+  - comm=0.1.4
+  - compiler-rt=16.0.6
+  - compiler-rt_osx-64=16.0.6
+  - curl=8.4.0
+  - debugpy=1.8.0
+  - decorator=5.1.1
+  - exceptiongroup=1.1.3
+  - executing=2.0.1
+  - expat=2.5.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.12.1
+  - fribidi=1.0.10
+  - gettext=0.21.1
+  - gfortran_impl_osx-64=12.3.0
+  - gfortran_osx-64=12.3.0
+  - gmp=6.3.0
+  - graphite2=1.3.13
+  - harfbuzz=8.2.1
+  - icu=73.2
+  - importlib-metadata=6.8.0
+  - importlib_metadata=6.8.0
+  - ipykernel=6.26.0
+  - ipython=8.17.2
+  - isl=0.25
+  - jedi=0.19.1
+  - jupyter_client=8.6.0
+  - jupyter_core=5.5.0
+  - krb5=1.21.2
+  - ld64_osx-64=609
+  - lerc=4.0.0
+  - libblas=3.9.0
+  - libclang-cpp16=16.0.6
+  - libcurl=8.4.0
+  - libcxx=16.0.6
+  - libdeflate=1.19
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libexpat=2.5.0
+  - libffi=3.4.2
+  - libgfortran=5.0.0
+  - libgfortran-devel_osx-64=12.3.0
+  - libgfortran5=13.2.0
+  - libglib=2.78.1
+  - libiconv=1.17
+  - libjpeg-turbo=3.0.0
+  - liblapack=3.9.0
+  - libllvm16=16.0.6
+  - libnghttp2=1.58.0
+  - libopenblas=0.3.24
+  - libpng=1.6.39
+  - libsodium=1.0.18
+  - libsqlite=3.44.0
+  - libssh2=1.11.0
+  - libtiff=4.6.0
+  - libwebp-base=1.3.2
+  - libxml2=2.11.5
+  - libzlib=1.2.13
+  - llvm-openmp=17.0.4
+  - llvm-tools=16.0.6
+  - make=4.3
+  - matplotlib-inline=0.1.6
+  - mpc=1.3.1
+  - mpfr=4.2.1
+  - ncurses=6.4
+  - nest-asyncio=1.5.8
+  - openssl=3.1.4
+  - packaging=23.2
+  - pandoc=3.1.3
+  - pango=1.50.14
+  - parso=0.8.3
+  - pcre2=10.40
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pip=23.3.1
+  - pixman=0.42.2
+  - platformdirs=4.0.0
+  - prompt-toolkit=3.0.40
+  - prompt_toolkit=3.0.40
+  - psutil=5.9.5
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pygments=2.16.1
+  - python=3.9.18
+  - python-dateutil=2.8.2
+  - python_abi=3.9
+  - pyzmq=25.1.1
+  - r-base=4.3.2
+  - r-base64enc=0.1_3
+  - r-bslib=0.5.1
+  - r-cachem=1.0.8
+  - r-cli=3.6.1
+  - r-cpp11=0.4.6
+  - r-crayon=1.5.2
+  - r-dbi=1.1.3
+  - r-digest=0.6.33
+  - r-dplyr=1.1.3
+  - r-duckdb=0.9.1_1
+  - r-ellipsis=0.3.2
+  - r-evaluate=0.23
+  - r-fansi=1.0.5
+  - r-fastmap=1.1.1
+  - r-fontawesome=0.5.2
+  - r-fs=1.6.3
+  - r-generics=0.1.3
+  - r-glue=1.6.2
+  - r-here=1.0.1
+  - r-highr=0.10
+  - r-htmltools=0.5.7
+  - r-irdisplay=1.1
+  - r-irkernel=1.3.2
+  - r-jquerylib=0.1.4
+  - r-jsonlite=1.8.7
+  - r-knitr=1.45
+  - r-lattice=0.22_5
+  - r-lifecycle=1.0.4
+  - r-lubridate=1.9.3
+  - r-magrittr=2.0.3
+  - r-matrix=1.6_2
+  - r-memoise=2.0.1
+  - r-mime=0.12
+  - r-pbdzmq=0.3_10
+  - r-pillar=1.9.0
+  - r-pkgconfig=2.0.3
+  - r-png=0.1_8
+  - r-r6=2.5.1
+  - r-rappdirs=0.3.3
+  - r-rcpp=1.0.11
+  - r-rcpptoml=0.2.2
+  - r-repr=1.1.6
+  - r-reticulate=1.34.0
+  - r-rlang=1.1.2
+  - r-rmarkdown=2.25
+  - r-rprojroot=2.0.4
+  - r-sass=0.4.7
+  - r-stringi=1.7.12
+  - r-stringr=1.5.0
+  - r-tibble=3.2.1
+  - r-tidyselect=1.2.0
+  - r-timechange=0.2.0
+  - r-tinytex=0.48
+  - r-utf8=1.2.4
+  - r-uuid=1.1_1
+  - r-vctrs=0.6.4
+  - r-withr=2.5.2
+  - r-xfun=0.41
+  - r-yaml=2.3.7
+  - readline=8.2
+  - setuptools=68.2.2
+  - sigtool=0.1.3
+  - six=1.16.0
+  - stack_data=0.6.2
+  - tapi=1100.0.11
+  - tk=8.6.13
+  - tktable=2.10
+  - tornado=6.3.3
+  - traitlets=5.13.0
+  - typing_extensions=4.8.0
+  - wcwidth=0.2.9
+  - wheel=0.41.3
+  - xz=5.2.6
+  - zeromq=4.3.5
+  - zipp=3.17.0
+  - zlib=1.2.13
+  - zstd=1.5.5
   - pip:
       - atpublic==4.0
       - attrs==23.1.0
