--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,13 +17,21 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
+      # - name: Set up Conda
+      #   uses: conda-incubator/setup-miniconda@v3
+      #   with:
+      #     conda-channels: anaconda, conda-forge
+      #     auto-activate-base: false
+      #     activate-environment: HDC-handbook-r-python
+      #     environment-file: analytics_handbook_env.yml
       - name: Set up Conda
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          conda-channels: anaconda, conda-forge
-          auto-activate-base: false
-          activate-environment: HDC-handbook-r-python
-          environment-file: analytics_handbook_env.yml
+        uses: s-weigand/setup-conda@v1
+      - name: Conda Environment creation
+        run: |
+        conda create env -f analytics_handbook_env.yml
+        source activate HDC-handbook-r-python
+        pip install -e .
+        
           
 
       - name: Render and Publish
