--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,6 +45,7 @@ jobs:
       #   run: source activate /usr/share/miniconda/envs/HDC-handbook-r-python	
 
       - name: Render and Publish
+        shell: bash -l {0}
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
