--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,18 +34,14 @@ jobs:
       - name: get conda info
         shell: bash 
         run: |
-          conda info
-          
+          conda info  
           ls /usr/share/miniconda/envs/
-          
-          
-          conda activate HDC-handbook-r-python
+          source activate HDC-handbook-r-python
           
       # - name: activate conda env
       #   run: source activate /usr/share/miniconda/envs/HDC-handbook-r-python	
 
       - name: Render and Publish
-        
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
