--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,15 +34,18 @@ jobs:
       #     conda env create -f analytics_handbook_env.yml 
       #     conda activate HDC-handbook-r-python	
           
-      # - name: get conda info
+      - name: get conda info
       #  shell: bash -l {0}
-      #  run: |
-      #    conda info
+        run: |
+          conda info
       #    ls /usr/share/miniconda/envs/
       #    conda activate HDC-handbook-r-python
           
       # - name: activate conda env
       #   run: source activate /usr/share/miniconda/envs/HDC-handbook-r-python	
+
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
