add manual quarto publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,16 +39,19 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        
+
       - name: get conda info
         run: |
           conda info
           quarto check jupyter
-
-      - name: Render and Publish
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
+          quarto publish gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      #- name: Render and Publish
+      #  uses: quarto-dev/quarto-actions/publish@v2
+      #  with:
+      #    target: gh-pages
+      #  env:
+      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
